# xianyu-cli

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
src/xianyu_cli/: auth.py  cli.py  config.py  exporters.py  models.py  parser.py  scraper.py
tests/: test_auth.py  test_cli.py  test_parser.py
tests/fixtures/: search_payload.json
