[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "xianyu-cli"
version = "0.1.0"
description = "A CLI tool for searching Xianyu listings with Playwright."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["xianyu", "goofish", "cli", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]
dependencies = [
  "playwright>=1.53.0",
  "qrcode>=7.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
xianyu = "xianyu_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xianyu_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
